--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 }
 h1{
     font-size:40;
-    color:aliceblue;
+    color:darkslategray;
     text-align:center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
