--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: lightseagreen;
     text-align: center;
+    margin: 100px;
 }
 h1{
     font-size:40;
@@ -32,5 +33,6 @@ ul, ol{
 li{
     font-size:18;
     color:white;
+    text-align: left;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
